# callite

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  healthcheck.py  main.py  pyproject.toml  refactor.patch  setup.py
.github/workflows/: python-publish.yml
callite/client/: rpc_client.py
callite/rpctypes/: message_base.py  response.py
callite/server/: rpc_server.py
callite/shared/: redis_connection.py
