[tool.poetry]
name = "callite"
version = "0.2.11"
description = "Slim Redis RPC implementation"
authors = ["Emrah Gozcu <gozcu@gri.ai>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/gri-ai/callite"
homepage = "https://www.gri.ai"

[tool.poetry.dependencies]
python = "^3.10"
redis = "^5.0.3"
tenacity = "^8.5.0"

[tool.poetry.dev-dependencies]
mypy = "^1.9.0"
setuptools = "^69.1.1"
pydevd-pycharm = "~=233.14475.28"
cython = "^3.0.0"

[build-system]
requires = ["setuptools>=69.1.1", "wheel", "Cython>=3.0.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "setuptools (>=81.0.0,<82.0.0)",
    "cython (>=3.0.0,<4.0.0)",
]
